# 106a-final-project

./: .gitignore  README.md
cv/: camera_capture_image.py  crop_segments.py  pipeline.py  save_segments.py  segment_image.py
src/perception/: setup.py
src/perception/perception/: process_pointcloud.py
src/planning/: setup.py
src/planning/launch/: lab5_bringup.launch.py
src/planning/planning/: ik.py  main.py  static_tf_transform.py
src/tuck_high/: package.xml  setup.cfg  setup.py
src/tuck_high/launch/: tuck_high.launch.py
src/tuck_high/tuck_high/: tuck_high.py
web_ui/: server.py
