<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tuck_high</name>
  <version>0.0.0</version>
  <description>Move UR7e to high observation tuck pose.</description>
  <maintainer email="ziyuanxu2333@gmail.com">ee106a-acz</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
